src/objects/Apttus_Revenue2__RevenueRun__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Revenue2__FilterCriteria__c</fullName>
        <description>Holds JSON representation of the selection criteria for the Revenue Run.</description>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__JobType__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Actuals</fullName>
                </value>
                <value>
                    <fullName>Generate Forecasts</fullName>
                </value>
                <value>
                    <fullName>Rollback Actuals</fullName>
                </value>
                <value>
                    <fullName>Rollback Forecasts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__MonthlyDate__c</fullName>
        <description>When the Schedule Type is Monthly by Date, this is the day of the month to launch the Revenue Run.</description>
        <label>Monthly Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
                <value>
                    <fullName>26th</fullName>
                </value>
                <value>
                    <fullName>27th</fullName>
                </value>
                <value>
                    <fullName>28th</fullName>
                </value>
                <value>
                    <fullName>29th</fullName>
                </value>
                <value>
                    <fullName>30th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__MonthlyWeekDay__c</fullName>
        <description>When the Schedule Type is Monthly by Day, this is the day (of the specified week of the month)
to launch the Revenue Run.</description>
        <label>Monthly Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__MonthlyWeek__c</fullName>
        <description>When the Schedule Type is Monthly by Day, this is the week of the month the Revenue Run
will be launched.</description>
        <label>Monthly Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>the 1st</fullName>
                </value>
                <value>
                    <fullName>the 2nd</fullName>
                </value>
                <value>
                    <fullName>the 3rd</fullName>
                </value>
                <value>
                    <fullName>the 4th</fullName>
                </value>
                <value>
                    <fullName>the Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__PeriodEndDate__c</fullName>
        <description>The end date a scheduled Revenue Run will be run. A value of null implies there is no end date.</description>
        <label>Schedule Run To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__PeriodStartDate__c</fullName>
        <description>The start date a scheduled Revenue Run will be run. A value of null implies there is no start date.</description>
        <label>Schedule Run From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__PreferredStartHour__c</fullName>
        <description>The preferred hour of the day the Revenue Run will be launched.</description>
        <label>Preferred Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 AM</fullName>
                </value>
                <value>
                    <fullName>1 AM</fullName>
                </value>
                <value>
                    <fullName>2 AM</fullName>
                </value>
                <value>
                    <fullName>3 AM</fullName>
                </value>
                <value>
                    <fullName>4 AM</fullName>
                </value>
                <value>
                    <fullName>5 AM</fullName>
                </value>
                <value>
                    <fullName>6 AM</fullName>
                </value>
                <value>
                    <fullName>7 AM</fullName>
                </value>
                <value>
                    <fullName>8 AM</fullName>
                </value>
                <value>
                    <fullName>9 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>1 PM</fullName>
                </value>
                <value>
                    <fullName>2 PM</fullName>
                </value>
                <value>
                    <fullName>3 PM</fullName>
                </value>
                <value>
                    <fullName>4 PM</fullName>
                </value>
                <value>
                    <fullName>5 PM</fullName>
                </value>
                <value>
                    <fullName>6 PM</fullName>
                </value>
                <value>
                    <fullName>7 PM</fullName>
                </value>
                <value>
                    <fullName>8 PM</fullName>
                </value>
                <value>
                    <fullName>9 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
                <value>
                    <fullName>11 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__PreferredStartMinute__c</fullName>
        <description>The preferred minute of the hour the Revenue Run will be launched.</description>
        <label>Preferred Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RunType__c</fullName>
        <description>The type of Revenue Run to perform. Run immediately or schedule to run on a recurring basis.</description>
        <label>Run Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__ScheduleType__c</fullName>
        <description>The manner is which to schedule the Revenue Run on a recurring basis.</description>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly by date</fullName>
                </value>
                <value>
                    <fullName>Monthly by day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__ScheduledJobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__WeekDay__c</fullName>
        <description>When the Schedule Type is Weekly, this will be days of the week to launch the Revenue Run.</description>
        <label>Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Run</label>
    <listViews>
        <fullName>Apttus_Revenue2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Revenue Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>